# aginx

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  DEV-PLAN.md  README.md  aginx.example.toml  error_output  initialize_response.json  install.sh  output.txt  scan-agents.sh  test_streaming.sh  timeout
.github/workflows/: release.yml
docs/: AGENT_ACP_SPEC.md  development-plan.md
docs/archive/: ACP-DESIGN.md  ACP_SCHEME_C.md  ARCHITECTURE.md  TESTING.md  development-plan.md  issues.md
examples/: test_acp_permission.rs  test_claude_agent.rs  test_claude_json.rs  test_claude_tools.rs  test_client.rs  test_client_relay.rs  test_full.rs  test_relay.rs  test_session.rs  test_tcp.rs
src/: auth.rs  main.rs
src/acp/: acp_backend.rs  acp_client.rs  agent_event.rs  agent_process.rs  backend.rs  handler.rs  mod.rs  notifications.rs  orchestrator.rs  permission.rs  stream.rs  streaming.rs  streaming_types.rs  tests.rs  timeline.rs  types.rs
src/acp/adapter/: acp_stdio.rs  mod.rs  process.rs  session_scan.rs  state.rs
src/acp/adapter/claude/: adapter_impl.rs  events.rs  mod.rs  session_storage.rs  streaming.rs
src/agent/: discovery.rs  manager.rs  mod.rs  permission.rs  session.rs  setup.rs
src/auth/: jwt.rs  manager.rs  mod.rs
src/binding/: mod.rs
src/config/: loader.rs  mod.rs
src/fingerprint/: mod.rs
src/protocol/: jsonrpc.rs  message.rs  mod.rs
src/relay/: e2ee.rs  mod.rs
src/server/: handler.rs  mod.rs  tcp.rs
tests/: test_acp.rs  test_acp_stdio.sh
