[package]
name = "aginx"
version = "0.3.0"
edition = "2021"
rust-version = "1.70"
authors = ["Yinnho Team"]
license = "MIT"
description = "Agent Protocol — access Agents as easily as visiting a website"
repository = "https://github.com/yinnho/aginx"
readme = "README.md"
keywords = ["agent", "protocol", "aginx", "cli"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "aginx"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "process", "net", "io-util", "sync", "time", "rt-multi-thread"] }

# CLI
clap = { version = "4", features = ["derive", "env", "color", "suggestions"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"

# Encoding
base64 = "0.22"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"

# Async trait
async-trait = "0.1"

# HTTP client (for API registration)
reqwest = { version = "0.12", features = ["json"] }

# TLS for relay connections
tokio-native-tls = "0.3"
native-tls = "0.2"

# E2E encryption for relay
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
dirs = "5"
rand = "0.8"
shellexpand = "3"
uuid = { version = "1", features = ["v4"] }

# Hardware fingerprint
sha2 = "0.10"
hex = "0.4"

# JWT authentication
jsonwebtoken = "9"

# Singleton
once_cell = "1"
which = "8.0.2"
local-ip-address = "0.6.11"

[features]
acp-native = []

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde_json = "1"
tokio-native-tls = "0.3"
native-tls = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
